Use jdk 11 to build project
glowroot-central now requires jdk11+